[package]
name = "primecount"
version = "0.1.1"
authors = ["Madiyar Aitbayev (madiyar92@gmail.com)"]
edition = "2018"
license-file = "LICENSE"
build = "build.rs"
repository = "https://github.com/maitbayev/primecount-rs"
readme = "README.md"
description = """
Rust wrapper for https://github.com/kimwalisch/primecount.
"""
keywords = ["math", "algorithms", "primecount", "prime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1.44"


[dependencies]
